# codex

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  index_cache.json  开发计划.md
.github/workflows/: build.yml
docs/: API参考.md  best_practices.md  常见问题解答.md  开发者指南.md  最佳实践指南.md  用户指南.md
scripts/install/: install.sh
scripts/install/macos/: build_pkg.sh
scripts/install/windows/: codex_installer.iss
scripts/package_managers/: codex.rb  debian_control
src/: ai.rs  ai_response_quality.rs  auto_update.rs  cli.rs  code.rs  code_understanding.rs  command.rs  context.rs  docs.rs  error.rs  frameworks.rs  hook.rs  knowledge_base.rs  lib.rs  main.rs  parsers.rs  plugins.rs  scraper.rs  solo.rs  subagent.rs  task.rs  ui.rs
src/ai/: adapter.rs  mod.rs  multilingual.rs  prompt.rs
src/config/: app.rs  loader.rs  mod.rs  validator.rs  wizard.rs
src/core/: app.rs  mod.rs  runtime.rs
src/i18n/: detector.rs  loader.rs  locale.rs  manager.rs  mod.rs
src/knowledge/: base.rs  indexer.rs  mod.rs  multilingual.rs  remote.rs  scraper.rs  search_result_optimizer.rs  searcher.rs
src/tools/: executor.rs  localization.rs  mod.rs  parser.rs  registry.rs
src/tools/builtin/: editor.rs  file.rs  mod.rs  shell.rs  system.rs
templates/prompts/: code.yaml  default.yaml
tests/: benchmark.rs  config_test.rs  test_config.rs  test_parsers.rs  test_tools.rs
